# onion_ed25519_signature

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ed25519_sign_verify  ed25519_sign_verify.cbp  main.c  output
header/: sign.h
src/: sign.c  verify.c
